# AFO

./: .gitignore  .gitmodules  AFO.pptx  AFO.sln  CMakeLists.txt  README.md
Evaluation/: Evaluation.vcxproj  main.cpp
Optimizer/: CMakeLists.txt  Dummy.cpp  Dummy.h  Optimizer.cpp  Optimizer.h  Optimizer.vcxproj  Optimizer.vcxproj.filters
TestFunctions/: CMakeLists.txt  TestFunctions.cpp  TestFunctions.h  TestFunctions.vcxproj  TestFunctions.vcxproj.filters
UnitTest/: CMakeLists.txt  Test_Optimizer.cpp  Test_TestFunctions.cpp
unit_test/: test.cpp  unit_test.vcxproj
